--- a/SQL查詢表.html
+++ b/SQL查詢表.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
-  <title>資料表欄位查詢</title>
+  <title>B2B資料表欄位查詢</title>
   <style>
     body {
       font-family: "Segoe UI", "微軟正黑體", sans-serif;
