調整資料來源

--- a/SQL查詢表.html
+++ b/SQL查詢表.html
@@ -344,7 +344,28 @@
       ]);
     };
 
-    fetchWithTimeout('data.json')
+    // 先嘗試從 API 取得資料，失敗時再 fallback 到 data.json
+    const API_URL = "https://your-api-endpoint.com/getSqlFields"; // 請替換為實際 API
+
+    function loadDataFromJson() {
+      fetchWithTimeout('data.json')
+        .then(response => {
+          if (!response.ok) {
+            throw new Error('Network response was not ok');
+          }
+          return response.json();
+        })
+        .then(jsonData => {
+          data = jsonData;
+          console.log('Data loaded from data.json:', data);
+        })
+        .catch(error => {
+          console.error('Error loading data from data.json:', error);
+          errorMessageDiv.textContent = "⚠️ 無法載入資料，請檢查檔案是否存在或網路連線是否正常。";
+        });
+    }
+
+    fetchWithTimeout(API_URL)
       .then(response => {
         if (!response.ok) {
           throw new Error('Network response was not ok');
@@ -353,11 +374,11 @@
       })
       .then(jsonData => {
         data = jsonData;
-        console.log('Data loaded successfully:', data);
+        console.log('Data loaded from API:', data);
       })
       .catch(error => {
-        console.error('Error loading data:', error);
-        errorMessageDiv.textContent = "⚠️ 無法載入資料，請檢查檔案是否存在或網路連線是否正常。";
+        console.error('Error loading data from API, fallback to data.json:', error);
+        loadDataFromJson();
       });
 
     const input = document.getElementById("searchInput");
