--- a/SQL查詢表.html
+++ b/SQL查詢表.html
@@ -498,16 +498,47 @@
     }
 
     function clearSelection() {
-      const selectors = document.querySelectorAll(".field-selector");
-      selectors.forEach(selector => {
+      // 清除所有欄位選擇按鈕狀態與樣式
+      document.querySelectorAll(".field-selector").forEach(selector => {
         const row = selector.closest("tr");
         selector.dataset.state = "none";
         selector.textContent = "未選擇";
         selector.className = "field-selector";
-        row.classList.remove("selected-select", "selected-where");
+        row.classList.remove(
+          "selected-select",
+          "selected-where",
+          "selected-both",
+          "selected-joinkey",
+          "selected-joinkeysel",
+          "selected-joinkeyselwhere"
+        );
       });
+
+      // 清除已選欄位與 join 順序
       selectedFields.clear();
-      queryDiv.style.display = "none";
+      joinOrder = [];
+
+      // 清空所有查詢輸入框
+      ["searchInput", "searchInput2", "searchInput3", "searchInput4"].forEach(id => {
+        const el = document.getElementById(id);
+        if (el) el.value = "";
+      });
+
+      // 清空日期輸入框
+      ["changeTimeStart", "changeTimeEnd"].forEach(id => {
+        const el = document.getElementById(id);
+        if (el) el.value = "";
+      });
+
+      // 清除 checkbox
+      const changeTimeNotNone = document.getElementById("changeTimeNotNone");
+      if (changeTimeNotNone) changeTimeNotNone.checked = false;
+
+      // 重新渲染表格
+      renderTable(data);
+
+      // 隱藏 SQL 區塊
+      document.getElementById("queryResult").style.display = "none";
     }
 
     function generateSQL() {
