--- a/SQL查詢表.html
+++ b/SQL查詢表.html
@@ -1112,13 +1112,18 @@
         let col = `[${field.fieldName}] ${typeStr}`;
         if (field.isNullable === "否") col += " NOT NULL";
         let sql =
-          getSqlHeader(fullTableName,field.fieldName) +
+          getSqlHeader(fullTableName, field.fieldName) +
           `IF NOT EXISTS (SELECT 1 FROM sys.columns WHERE Name = N'${field.fieldName}' AND Object_ID = Object_ID(N'${fullTableName}'))\n` +
           "BEGIN\n" +
           `  ALTER TABLE ${fullTableName} ADD ${col}; /* ${field.description} */\n`;
         if (field.defaultValue) {
           const constraint = `DF_${tableGroup.tableName}_${field.fieldName}`;
           sql += `  ALTER TABLE ${fullTableName} ADD CONSTRAINT ${constraint} DEFAULT ${field.defaultValue} FOR [${field.fieldName}];\n`;
+        }
+        // 新增註解
+        if (field.description && field.description.trim()) {
+          sql += `  EXEC sys.sp_addextendedproperty @name=N'MS_Description', @value=N'${field.description.replace(/'/g, "''")}' , @level0type=N'SCHEMA',@level0name=N'${tableGroup.schemaName}', @level1type=N'TABLE',@level1name=N'${tableGroup.tableName}', @level2type=N'COLUMN',@level2name=N'${field.fieldName}'\n`;
+          sql += `  GO\n`;
         }
         sql += "END";
         return sql;
@@ -1140,7 +1145,7 @@
         let col = `[${field.fieldName}] ${typeStr}`;
         if (field.isNullable === "否") col += " NOT NULL";
         let sql =
-          getSqlHeader(fullTableName,field.fieldName) +
+          getSqlHeader(fullTableName, field.fieldName) +
           `IF EXISTS (SELECT 1 FROM sys.columns WHERE Name = N'${field.fieldName}' AND Object_ID = Object_ID(N'${fullTableName}'))\n` +
           "BEGIN\n" +
           `  ALTER TABLE ${fullTableName} ALTER COLUMN ${col}; /* ${field.description} */\n`;
@@ -1154,6 +1159,11 @@
             `    WHERE d.parent_object_id = OBJECT_ID(N'${fullTableName}') AND c.name = N'${field.fieldName}';\n` +
             `  IF @defname IS NOT NULL EXEC('ALTER TABLE ${fullTableName} DROP CONSTRAINT ' + @defname);\n` +
             `  ALTER TABLE ${fullTableName} ADD CONSTRAINT ${constraint} DEFAULT ${field.defaultValue} FOR [${field.fieldName}];\n`;
+        }
+        // 更新註解
+        if (field.description && field.description.trim()) {
+          sql += `  EXEC sys.sp_updateextendedproperty @name=N'MS_Description', @value=N'${field.description.replace(/'/g, "''")}' , @level0type=N'SCHEMA',@level0name=N'${tableGroup.schemaName}', @level1type=N'TABLE',@level1name=N'${tableGroup.tableName}', @level2type=N'COLUMN',@level2name=N'${field.fieldName}'\n`;
+          sql += `  GO\n`;
         }
         sql += "END";
         return sql;
